--- a/admin/preview/map.html
+++ b/admin/preview/map.html
@@ -1,3 +1,3 @@
 <script type="text/html">
-	 <iframe class="uix-page-builder-map" style="border:none;" scrolling="no" width="<%=width%>" height="<%=height%>" src="<%=pluginPath%>admin/uixpbform/functions/google-map.php?style=<%=style%>&latitude=<%=latitude%>&longitude=<%=longitude%>&zoom=<%=zoom%>&name=<%=name%>&width=<%=width%>&height=<%=height%>&marker=<%=marker%>"></iframe>
+	 <iframe class="uix-page-builder-map" style="border:none;width:<%=width%>;height:<%=height%>;overflow:hidden;" scrolling="no" src="<%=pluginPath%>admin/uixpbform/functions/google-map.php?style=<%=style%>&latitude=<%=latitude%>&longitude=<%=longitude%>&zoom=<%=zoom%>&name=<%=name%>&width=<%=width%>&height=<%=height%>&marker=<%=marker%>"></iframe>
 </script>	
